@@ -1,61 +1,141 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This is a general purpose Gradle build.
- * To learn more about Gradle by exploring our Samples at https://docs.gradle.org/8.6/samples
- */
 plugins {
-
-  id 'com.zeroc.gradle.ice-builder.slice' version '1.5.0' apply false
-
+    id 'com.zeroc.gradle.ice-builder.slice' version '1.5.0' apply false
+    id 'org.openjfx.javafxplugin' version '0.0.14'
+    id 'application'
 }
-
 
 subprojects {
-  //
-  // Apply Java and Ice Builder plug-ins to all sub-projects
-  //
-  apply plugin: 'java'
-  apply plugin: 'com.zeroc.gradle.ice-builder.slice'
-  //
-  // Both Client and Server projects share the Printer.ice Slice definitions
-  //
-  slice {
-    
-    java {
-      files = [file("../calNumber.ice")]
-    }
-  
-  }
-  //
-  // Use Ice JAR files from maven central repository
-  //
-  repositories {
+    apply plugin: 'java'
+    apply plugin: 'com.zeroc.gradle.ice-builder.slice'
+    apply plugin: 'org.openjfx.javafxplugin'
 
-    mavenCentral()
-  
-  }
-  
-  //
-  // Both Client and Server depend only on Ice JAR
-  //
-  dependencies {
-
-    implementation 'com.zeroc:ice:3.7.2'
-  
-  }
-  
-  //
-  // Create a JAR file with the appropriate Main-Class and Class-Path attributes
-  //
-  jar {
-    manifest {
-      
-      attributes(
-      "Main-Class": project.name.capitalize(),
-      "Class-Path": configurations.runtimeClasspath.resolve().collect { it.toURI() }.join(' ')
-      )
-    
+    repositories {
+        mavenCentral()
     }
-  }
+
+    slice {
+        iceHome = file("/opt/homebrew/opt/ice")
+        java {
+            files = [file("../calNumber.ice")]
+        }
+    }
+
+    dependencies {
+        implementation 'com.zeroc:ice:3.7.2'
+    }
+
+    javafx {
+        version = "21"
+        modules = [ 'javafx.controls', 'javafx.fxml' ]
+    }
+
+    jar {
+        manifest {
+            attributes(
+                "Main-Class": project.name.capitalize(),
+                "Class-Path": configurations.runtimeClasspath.resolve().collect { it.toURI() }.join(' ')
+            )
+        }
+    }
 }
+
+project(":client") {
+    apply plugin: 'application'
+
+    application {
+        mainClass = 'ClientGUI'
+    }
+}
+
+
+
+
+
+
+
+
+// /*
+//  * This file was generated by the Gradle 'init' task.
+//  *
+//  * This is a general purpose Gradle build.
+//  * To learn more about Gradle by exploring our Samples at https://docs.gradle.org/8.6/samples
+//  */
+// plugins {
+
+//   id 'com.zeroc.gradle.ice-builder.slice' version '1.5.0' apply false
+//   id 'application'
+
+// }
+
+
+// subprojects {
+//   //
+//   // Apply Java and Ice Builder plug-ins to all sub-projects
+//   //
+//   apply plugin: 'java'
+//   apply plugin: 'com.zeroc.gradle.ice-builder.slice'
+//   //
+//   // Both Client and Server projects share the Printer.ice Slice definitions
+//   //
+//   slice {
+//     iceHome = file("/opt/homebrew/opt/ice")
+
+//     java {
+//       files = [file("../calNumber.ice")]
+//     }
+
+//   }
+
+//   //
+//   // Use Ice JAR files from maven central repository
+//   //
+//   repositories {
+
+//     mavenCentral()
+  
+//   }
+  
+//   //
+//   // Both Client and Server depend only on Ice JAR
+//   //
+//   dependencies {
+
+//     implementation 'org.openjfx:javafx-controls:21'
+//     implementation 'org.openjfx:javafx-fxml:21'
+//     implementation 'com.zeroc:ice:3.7.2'
+  
+//   }
+  
+//   //
+//   // Create a JAR file with the appropriate Main-Class and Class-Path attributes
+//   //
+//   jar {
+//     manifest {
+      
+//       attributes(
+//       "Main-Class": project.name.capitalize(),
+//       "Class-Path": configurations.runtimeClasspath.resolve().collect { it.toURI() }.join(' ')
+//       )
+    
+//     }
+//   }
+
+// }
+
+// java {
+//     toolchain {
+//         languageVersion = JavaLanguageVersion.of(17)
+//     }
+// }
+
+// application {
+//     mainClass = 'ClientGUI'
+// }
+
+// run {
+//     jvmArgs = [
+//         '--module-path', '/Users/luiscadena/Documents/GitHub/JavaFX/lib',
+//         '--add-modules', 'javafx.controls,javafx.fxml'
+//     ]
+// }
+
